--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   },
   "dependencies": {
     "@p5-wrapper/react": "^4.4.0",
-    "express": "^4.19.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vite-express": "^0.16.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/p5": "^1.7.6",
